--- a/MissionariesAndCannibals/game.html
+++ b/MissionariesAndCannibals/game.html
@@ -27,19 +27,19 @@
 			</div>
 			<div id="source">
 			
-					<img src="images/miss.svg" width="100px" height="100px" id="s1" style="position: relative;" onclick="Main(this.id)" class="saint">
-					<img src="images/miss.svg" width="100px" height="100px" id="s2" style="position: relative;" onclick="Main(this.id)" class="saint">
-					<img src="images/miss.svg" width="100px" height="100px" id="s3" onclick="Main(this.id)" style="position: relative;" class="saint">
+					<img src="images/missionary.png" width="100px" height="100px" id="s1" style="position: relative;" onclick="Main(this.id)" class="saint">
+					<img src="images/missionary.png" width="100px" height="100px" id="s2" style="position: relative;" onclick="Main(this.id)" class="saint">
+					<img src="images/missionary.png" width="100px" height="100px" id="s3" onclick="Main(this.id)" style="position: relative;" class="saint">
 
-					<img src="images/canni.svg" width="100px" height="100px" id="c1" style="position: relative;" onclick="Main(this.id)" class="canni">
-					<img src="images/canni.svg" width="100px" height="100px" id="c2" style="position: relative;" onclick="Main(this.id)" class="canni">
-					<img src="images/canni.svg" width="100px" height="100px" id ="c3" onclick="Main(this.id)" style="position: relative;" class="canni">
+					<img src="images/cannibal.png" width="100px" height="100px" id="c1" style="position: relative;" onclick="Main(this.id)" class="canni">
+					<img src="images/cannibal.png" width="100px" height="100px" id="c2" style="position: relative;" onclick="Main(this.id)" class="canni">
+					<img src="images/cannibal.png" width="100px" height="100px" id ="c3" onclick="Main(this.id)" style="position: relative;" class="canni">
 
 
 			</div>
 			<div id = "boat">
 			 	<div   id="boat1">
-					<img src="images/boat.svg" width="400px" height="200px" onclick="check()">
+					<img src="images/boat.png" width="400px" height="200px" onclick="check()">
 
 				</div>
 
